# The main DB package stuff
[package]
name = "NoSQLDB"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/NikolaOgnjenovic/NoSQLDB"
description = "NoSQL database project in the advanced algorithms and data structures course on the third semester of software engineering studies on the Faculty of Technical Sciences in Novi Sad."
license = "GPL-3.0"
authors = ["Luka Bursać", "Momir Stanišić", "Mihajlo Orlović", "Nikola Ognjenović", "Viktor Srbljin"]

[dependencies]
db_config = { path = "libraries/db_config" }
segment_elements = { path = "libraries/segment_elements" }
lru_cache = { path = "libraries/lru_cache" }
bloom_filter = { path = "libraries/bloom_filter" }
count_min_sketch = { path = "libraries/count_min_sketch" }
hyperloglog = { path = "libraries/hyperloglog" }
simhash = { path = "libraries/simhash" }
lsm = {path = "libraries/lsm" }

inquire = "0.6.2"
clearscreen = "2.0.1"
colored = "2.1.0"
enum-iterator = "1.5.0"

# All the libraries the package is built with
[workspace]
members = ["libraries/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"


