[package]
name = "b_tree"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Luka Bursać", "Mihajlo Orlović"]

[dependencies]
segment_elements = { path = "../segment_elements" }
bloom_filter = { path = "../bloom_filter" }

[dev-dependencies]
rand = "0.8.5"
peak_alloc = "0.2.0"