[package]
name = "memtable"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Luka Bursać"]

[dependencies]
segment_elements = { path = "../segment_elements" }
skip_list = { path = "../skip_list" }
b_tree = { path = "../b_tree" }
write_ahead_log = { path = "../write_ahead_log" }
db_config = { path = "../db_config" }
crc = "3.0.1"