[package]
name = "sstable"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Ognjenović"]

[dependencies]
crc = "3.0.1"
segment_elements = { path = "../segment_elements" }
bloom_filter = { path = "../bloom_filter" }
merkle_tree = { path = "../merkle_tree" }

[dev-dependencies]
tempfile = "3.9.0"
db_config = { path = "../db_config" }
skip_list = { path = "../skip_list" }
b_tree = { path = "../b_tree" }